2008-04-07  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/xvimage/xvimagesink.c (gst_xvimagesink_xvimage_new),
	(gst_xvimagesink_buffer_alloc):
	Fix calculation of 'expected size' for YV12 buffers.
	Be a little more verbose in the debug output for buffer-alloc'ed
	buffers which turn out to have the wrong size.

2008-04-07  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* RELEASE:
	* gst-plugins-base.doap:
	  Merge other changes from 0.10.19 release branch.

2008-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	  (gst_base_audio_sink_class_init):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	  (gst_base_audio_src_class_init):
	* gst/playback/gstplayback.c: (plugin_init):
	* gst/volume/gstvolume.c: (plugin_init):
	  Work around missing bits of thread-safety on older GLibs some
	  more to avoid assertions when starting up multiple playbin
	  objects concurrently (see #512382).

2008-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/pbutils/missing-plugins.c: (copy_and_clean_caps):
	  Remove some more fields.

2008-04-06  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

	* configure.ac:
	Actually build dlls when cross-compiling with mingw32.
	Fixes bug #526247.

2008-04-03  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Bump version to 0.10.19.1 after the unplanned 0.10.19 release.

2008-04-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/seek/seek.c: (play_cb), (pause_cb), (stop_cb),
	(msg_buffering), (connect_bus_signals), (main):
	Add statusbar.
	Add buffering support with feedback in the statusbar.

2008-04-03  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggmux.c:
	  Fix sample pipeline description.

2008-04-03  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins-docs.sgml: