@@ -1,3 +1,10 @@
+2008-04-09  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/gio/gstgio.c: (gst_gio_get_supported_protocols):
+	Filter cdda from the supported URI schemes. We can't support
+	musicbrainz tags and everything else one expects from a cdda source
+	with GIO. Fixes bug #526794.
+
 2008-04-07  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* sys/xvimage/xvimagesink.c (gst_xvimagesink_xvimage_new),
